# Pixalyze

./: CMakeLists.txt  README.md  main.cpp
include/commands/: analyze_command.h  ascii_command.h  blur_command.h  color_command.h  command.h  command_impl.h  command_trie.h  contours_command.h  display_command.h  edges_command.h  faces_command.h  gray_command.h  grayscale_command.h  help_command.h  histogram_command.h  load_command.h  quit_command.h  reset_command.h  save_command.h  show_command.h  smooth_command.h  text_command.h
include/core/: command_factory.h  image_manager.h  utils.h
src/commands/: analyze_command.cpp  ascii_command.cpp  blur_command.cpp  color_command.cpp  command.cpp  command_trie.cpp  contours_command.cpp  display_command.cpp  edges_command.cpp  faces_command.cpp  gray_command.cpp  grayscale_command.cpp  help_command.cpp  histogram_command.cpp  load_command.cpp  quit_command.cpp  reset_command.cpp  save_command.cpp  show_command.cpp  smooth_command.cpp  text_command.cpp
src/core/: command_factory.cpp  image_manager.cpp  utils.cpp
